<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adLeaveEmpty"
        android:text="@string/pass_leave_empty"
        android:textColor="#F00"
        android:visibility="gone"
        android:layout_marginBottom="4dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/oldPass"
            android:id="@+id/adOldPass"
            android:inputType="textPassword"
            android:singleLine="true"
            android:ems="10"
            android:layout_marginBottom="4dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPass"
            android:id="@+id/adNewPass1"
            android:inputType="textPassword"
            android:singleLine="true"
            android:ems="10"
            android:layout_marginBottom="4dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPass2"
            android:id="@+id/adNewPass2"
            android:inputType="textPassword"
            android:singleLine="true"
            android:ems="10"
            android:layout_marginBottom="4dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adError"
        android:text="@string/pass_missmatch"
        android:textColor="#F00"
        android:visibility="invisible"/>
</LinearLayout>