<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:gravity="center_vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@android:style/Widget.DeviceDefault.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="24sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/go"
        style="@android:style/Widget.DeviceDefault.Light.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/go"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/chPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changePass"
        android:textSize="18sp"
        android:textColor="#00F"
        android:textStyle="bold" />
</LinearLayout>